Fixed random pdf cutoff bug found on portals page

--- a/static/styles/aisCommon.css
+++ b/static/styles/aisCommon.css
@@ -491,11 +491,11 @@ details.details_1 .details-content {
 td a.file-download {
   background-repeat: no-repeat;
   background-position: left;
-  background-size: auto 1.5rem;
-  line-height: 1.5;
+  background-size: auto 1.4rem;
+  line-height: 1.6;
   display:block;
   margin: 1em;
-  padding-left: 2.25rem;
+  padding-left: 2rem;
 }
 .file-download a,
 td a.file-download {
